[gd_scene load_steps=4 format=3 uid="uid://cdxubxxdghi12"]

[ext_resource type="Script" path="res://scripts/npc.gd" id="1_5rury"]
[ext_resource type="PackedScene" uid="uid://cvw7001060x02" path="res://assets/blends/player.blend" id="1_wq2pi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wmwef"]

[node name="npc" type="StaticBody3D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_5rury")

[node name="player" parent="." instance=ExtResource("1_wq2pi")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wmwef")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Grounds"
horizontal_alignment = 1

[node name="Island" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Island"

[node name="Canyon" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Canyon"

[node name="Exit" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Island" to="." method="_on_island_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Canyon" to="." method="_on_canyon_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
